--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Sistema de IA Conversacional com Auto-Aprendizado e Memória Persistente",
   "scripts": {
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "cd backend && uvicorn main:app --reload --host 0.0.0.0 --port 8000",
-    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && python -m uvicorn main:app --reload --host 0.0.0.0 --port 8000",
+    "dev:frontend": "cd frontend && npx next dev -p 3000",
     "build": "npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "start": "npm run start:system",
